--- a/ios/uikit_fundamentals/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/ios/uikit_fundamentals/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -36,12 +36,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9cS-fq-1Re">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MemeReuseCell" textLabel="pfy-kF-U6K" style="IBUITableViewCellStyleDefault" id="9cS-fq-1Re">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9cS-fq-1Re" id="hDg-fP-YcS">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pfy-kF-U6K">
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -50,7 +59,13 @@
                             <outlet property="delegate" destination="Fl1-CZ-Sob" id="55o-6q-ytz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Sent Memes" id="Um4-c5-ztP"/>
+                    <navigationItem key="navigationItem" title="Sent Memes" id="Um4-c5-ztP">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4hA-2g-9HT">
+                            <connections>
+                                <segue destination="hCH-RN-oSO" kind="presentation" identifier="MemeMakerViewController" id="b8F-dk-bo9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6eX-OG-Tb7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -72,7 +87,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TxQ-CT-Vb4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="606" y="27"/>
+            <point key="canvasLocation" x="817" y="168"/>
         </scene>
         <!--Grid-->
         <scene sceneID="vsz-Ah-14d">
@@ -95,7 +110,7 @@
         <scene sceneID="zbX-pr-9ME">
             <objects>
                 <collectionViewController id="ObE-Rc-qTk" userLabel="Grid View Controller" customClass="GridViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="YVX-Q3-QoN">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="YVX-Q3-QoN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -120,7 +135,13 @@
                             <outlet property="delegate" destination="ObE-Rc-qTk" id="yEv-w2-V2w"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Sent Memes" id="1SS-6n-olB"/>
+                    <navigationItem key="navigationItem" title="Sent Memes" id="1SS-6n-olB">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="sws-Vn-QGg">
+                            <connections>
+                                <segue destination="hCH-RN-oSO" kind="presentation" id="Eze-22-Hf5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gdj-u2-4Sq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -143,10 +164,10 @@
             </objects>
             <point key="canvasLocation" x="-1066" y="-251"/>
         </scene>
-        <!--Meme Me Maker View Controller-->
+        <!--Meme Maker View Controller-->
         <scene sceneID="jUb-C4-bxE">
             <objects>
-                <viewController id="hCH-RN-oSO" customClass="MemeMeMakerViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hCH-RN-oSO" customClass="MemeMakerViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EsJ-Yi-10B"/>
                         <viewControllerLayoutGuide type="bottom" id="MF2-GE-6Dh"/>
@@ -169,7 +190,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="3Ml-lr-qYn"/>
                                     <barButtonItem systemItem="cancel" id="PXb-5H-6Gr">
                                         <connections>
-                                            <action selector="restart:" destination="hCH-RN-oSO" id="mUG-CA-Sic"/>
+                                            <action selector="dismissModal:" destination="hCH-RN-oSO" id="oQO-2I-55F"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -270,11 +291,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZa-Hw-XMW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1066" y="-1031"/>
+            <point key="canvasLocation" x="817" y="-529"/>
         </scene>
     </scenes>
     <resources>
         <image name="gridIcon" width="25" height="25"/>
         <image name="iconList" width="25" height="25"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="b8F-dk-bo9"/>
+    </inferredMetricsTieBreakers>
 </document>
