--- a/ios/uikit_fundamentals/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/ios/uikit_fundamentals/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -36,15 +37,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MemeReuseCell" textLabel="PrX-ti-Ocm" style="IBUITableViewCellStyleDefault" id="9cS-fq-1Re" customClass="ListViewCell" customModule="MemeMe" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListViewCellReuse" textLabel="PrX-ti-Ocm" style="IBUITableViewCellStyleDefault" id="9cS-fq-1Re" customClass="ListViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9cS-fq-1Re" id="hDg-fP-YcS">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PrX-ti-Ocm">
-                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -71,24 +72,6 @@
             </objects>
             <point key="canvasLocation" x="-258" y="-251"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="TWg-sw-bB2">
-            <objects>
-                <viewController id="9MA-Ke-4PH" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ojy-qg-Bzf"/>
-                        <viewControllerLayoutGuide type="bottom" id="2HW-VX-E4B"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="szf-kp-M2M">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TxQ-CT-Vb4" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="817" y="168"/>
-        </scene>
         <!--Grid-->
         <scene sceneID="vsz-Ah-14d">
             <objects>
@@ -110,7 +93,7 @@
         <scene sceneID="zbX-pr-9ME">
             <objects>
                 <collectionViewController id="ObE-Rc-qTk" userLabel="Grid View Controller" customClass="GridViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="YVX-Q3-QoN">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="YVX-Q3-QoN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -121,13 +104,27 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Whb-Mn-krw">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridViewCellReuse" id="Whb-Mn-krw" customClass="GridViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rLy-KF-BSV">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        </imageView>
+                                    </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="rLy-KF-BSV" secondAttribute="bottom" id="3KM-Dq-OOz"/>
+                                    <constraint firstAttribute="trailing" secondItem="rLy-KF-BSV" secondAttribute="trailing" id="Qjv-Mh-40g"/>
+                                    <constraint firstItem="rLy-KF-BSV" firstAttribute="leading" secondItem="Whb-Mn-krw" secondAttribute="leading" id="VJP-QD-Se9"/>
+                                    <constraint firstItem="rLy-KF-BSV" firstAttribute="top" secondItem="Whb-Mn-krw" secondAttribute="top" id="fzI-Xv-Uzm"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="rLy-KF-BSV" id="tuk-F1-sPn"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -145,7 +142,39 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gdj-u2-4Sq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-258" y="456"/>
+            <point key="canvasLocation" x="-258.39999999999998" y="455.62218890554726"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="XYb-SW-JjD">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="fWR-eK-DpC" customClass="DetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CeF-rG-oBB"/>
+                        <viewControllerLayoutGuide type="bottom" id="n28-Jd-Q3C"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AE1-nu-2z3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UeX-da-0ey">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UeX-da-0ey" firstAttribute="top" secondItem="CeF-rG-oBB" secondAttribute="bottom" id="fz6-IL-tHn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="UeX-da-0ey" secondAttribute="trailing" id="lL7-uh-HzN"/>
+                            <constraint firstItem="n28-Jd-Q3C" firstAttribute="top" secondItem="UeX-da-0ey" secondAttribute="bottom" id="lrR-co-ELd"/>
+                            <constraint firstItem="UeX-da-0ey" firstAttribute="leading" secondItem="AE1-nu-2z3" secondAttribute="leadingMargin" id="wCt-Ks-C0Y"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="UeX-da-0ey" id="xnf-eD-exI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hRX-zm-KO5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="817" y="192"/>
         </scene>
         <!--List-->
         <scene sceneID="Rj1-eT-uTf">
@@ -301,6 +330,6 @@
         <image name="iconList" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Eze-22-Hf5"/>
+        <segue reference="b8F-dk-bo9"/>
     </inferredMetricsTieBreakers>
 </document>
